<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.afrometal.radoslaw.thehangman.FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/riddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="28sp"
            android:text="@string/dummy_content"
            android:letterSpacing="0.2"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/default_margin"/>
        <ImageView
            android:id="@+id/hangman"
            android:src="@drawable/hangman_0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_margin="@dimen/default_margin"/>
        <LinearLayout
            android:id="@+id/text_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/guesses_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/spaceFiller"
            android:textColor="@color/textBlack"
            android:textStyle="bold"
            android:layout_margin="@dimen/default_margin"/>
        <LinearLayout
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:layout_marginTop="@dimen/default_margin">
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:layout_marginBottom="@dimen/default_margin">
        </LinearLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <Button
                android:id="@+id/nextPuzzle"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nextWord"
                android:onClick="nextPuzzle"/>
            <Button
                android:id="@+id/nextGame"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/newGame"
                android:onClick="newGame"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
